Fix: use overflow-x: auto instead of scroll

--- a/themes/hugo-finn/assets/css/main.css
+++ b/themes/hugo-finn/assets/css/main.css
@@ -40,7 +40,7 @@ footer {
   max-width: 100%;
   padding: 1rem 0.5rem;
   text-align: center;
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: nowrap;
 }
 
